@@ -1,39 +1,47 @@
 package net.modfest.funkyforcefields.block.entity;
 
-import net.modfest.funkyforcefields.FunkyForcefields;
-import net.modfest.funkyforcefields.regions.ForcefieldFluid;
-import net.modfest.funkyforcefields.regions.ForcefieldFluids;
-import net.modfest.funkyforcefields.transport.FluidContainerComponent;
-import net.modfest.funkyforcefields.transport.FluidContainerComponentImpl;
-import net.modfest.funkyforcefields.transport.TransportUtilities;
-import nerdhub.cardinal.components.api.ComponentType;
-import nerdhub.cardinal.components.api.component.BlockComponentProvider;
-import nerdhub.cardinal.components.api.component.Component;
+import net.fabricmc.fabric.api.lookup.v1.block.BlockApiCache;
 import net.minecraft.block.BlockState;
 import net.minecraft.block.Blocks;
 import net.minecraft.block.FluidDrainable;
 import net.minecraft.block.entity.BlockEntity;
 import net.minecraft.entity.EntityType;
 import net.minecraft.entity.ItemEntity;
-import net.minecraft.fluid.Fluid;
 import net.minecraft.fluid.Fluids;
 import net.minecraft.item.ItemStack;
 import net.minecraft.item.Items;
-import net.minecraft.nbt.CompoundTag;
-import net.minecraft.util.Tickable;
+import net.minecraft.nbt.NbtCompound;
+import net.minecraft.network.listener.ClientPlayPacketListener;
+import net.minecraft.network.packet.Packet;
+import net.minecraft.network.packet.s2c.play.BlockEntityUpdateS2CPacket;
+import net.minecraft.registry.RegistryWrapper;
+import net.minecraft.server.world.ServerWorld;
 import net.minecraft.util.math.BlockPos;
 import net.minecraft.util.math.Box;
 import net.minecraft.util.math.Direction;
 import net.minecraft.util.math.Vec3d;
-import net.minecraft.world.BlockView;
+import net.modfest.funkyforcefields.FunkyForcefields;
+import net.modfest.funkyforcefields.regions.ForcefieldFluid;
+import net.modfest.funkyforcefields.regions.ForcefieldFluids;
+import net.modfest.funkyforcefields.transport.FluidContainer;
+import net.modfest.funkyforcefields.transport.FluidContainerComponent;
+import net.modfest.funkyforcefields.transport.FluidContainerImpl;
+import net.modfest.funkyforcefields.transport.TransportUtilities;
+import org.jetbrains.annotations.Nullable;
 
-import java.util.Collections;
 import java.util.List;
-import java.util.Set;
 
-public class LiquidInputHatchBlockEntity extends BlockEntity implements BlockComponentProvider, Tickable {
-	public LiquidInputHatchBlockEntity() {
-		super(FunkyForcefields.LIQUID_INPUT_HATCH_BLOCK_ENTITY);
+public class LiquidInputHatchBlockEntity extends BlockEntity {
+
+	private ForcefieldFluid currentFluid = null;
+	private int fluidTicksRemaining = -1;
+	private BlockApiCache<FluidContainer, Direction> belowComponent = null;
+
+	public LiquidInputHatchBlockEntity(BlockPos pos, BlockState state) {
+		super(FunkyForcefields.LIQUID_INPUT_HATCH_BLOCK_ENTITY, pos, state);
+		if (getWorld() instanceof ServerWorld serverWorld) {
+			belowComponent = BlockApiCache.create(FluidContainer.LOOKUP, serverWorld, pos.offset(Direction.DOWN, 1));
+		}
 	}
 
 	public ForcefieldFluid getNewCurrentFluid() {
@@ -50,14 +58,16 @@ public class LiquidInputHatchBlockEntity extends BlockEntity implements BlockCom
 			return ForcefieldFluids.GLASS;
 		}
 		// TODO: make event driven?
-		List<ItemEntity> ents = world.getEntities(EntityType.ITEM, new Box(pos), item ->
-			item.getStack() != null && (item.getStack().getItem().equals(Items.WATER_BUCKET) || item.getStack().getItem().equals(Items.LAVA_BUCKET) || item.getStack().getItem().equals(Items.ROTTEN_FLESH)));
-		if (ents.size() > 0) {
-			if (ents.get(0).getStack().getItem().equals(Items.WATER_BUCKET)) {
+		List<ItemEntity> ents = world.getEntitiesByType(EntityType.ITEM, new Box(pos), item ->
+				item.getStack() != null && (item.getStack().getItem().equals(Items.WATER_BUCKET) || item.getStack().getItem().equals(Items.LAVA_BUCKET) || item.getStack().getItem().equals(Items.ROTTEN_FLESH)));
+		if (!ents.isEmpty()) {
+			if (ents.getFirst().getStack().getItem().equals(Items.WATER_BUCKET)) {
 				return ForcefieldFluids.WATER;
-			} else if (ents.get(0).getStack().getItem().equals(Items.ROTTEN_FLESH)) {
+			}
+			else if (ents.getFirst().getStack().getItem().equals(Items.ROTTEN_FLESH)) {
 				return ForcefieldFluids.FUNKY_GOO;
-			} else {
+			}
+			else {
 				return ForcefieldFluids.LAVA;
 			}
 		}
@@ -67,25 +77,27 @@ public class LiquidInputHatchBlockEntity extends BlockEntity implements BlockCom
 	public ForcefieldFluid removeCurrentFluid() {
 		assert world != null;
 		BlockState bs = world.getBlockState(pos.offset(Direction.UP));
-		if (bs.getBlock() instanceof FluidDrainable) {
-			Fluid fluid = ((FluidDrainable) bs.getBlock()).tryDrainFluid(world, pos.offset(Direction.UP), bs);
-			if (fluid.matchesType(Fluids.WATER)) {
+		if (bs.getBlock() instanceof FluidDrainable drainable) {
+			ItemStack stack = drainable.tryDrainFluid(null, world, pos.offset(Direction.UP), bs);
+			if (stack.isOf(Items.WATER_BUCKET)) {
 				return ForcefieldFluids.WATER;
 			}
-			if (fluid.matchesType(Fluids.LAVA)) {
+			if (stack.isOf(Items.LAVA_BUCKET)) {
 				return ForcefieldFluids.LAVA;
 			}
-		} else if (bs.getBlock() == Blocks.GLASS) {
+		}
+		else if (bs.getBlock() == Blocks.GLASS) {
 			if (world.removeBlock(pos.offset(Direction.UP), false)) {
 				return ForcefieldFluids.GLASS;
-			} else {
+			}
+			else {
 				return null;
 			}
 		}
-		List<ItemEntity> ents = world.getEntities(EntityType.ITEM, new Box(pos), item ->
-			item.getStack() != null && (item.getStack().getItem().equals(Items.WATER_BUCKET) || item.getStack().getItem().equals(Items.LAVA_BUCKET) || item.getStack().getItem().equals(Items.ROTTEN_FLESH)));
-		if (ents.size() > 0) {
-			ItemEntity ent = ents.get(0);
+		List<ItemEntity> ents = world.getEntitiesByType(EntityType.ITEM, new Box(pos), item ->
+				item.getStack() != null && (item.getStack().getItem().equals(Items.WATER_BUCKET) || item.getStack().getItem().equals(Items.LAVA_BUCKET) || item.getStack().getItem().equals(Items.ROTTEN_FLESH)));
+		if (!ents.isEmpty()) {
+			ItemEntity ent = ents.getFirst();
 			if (ent.isAlive()) {
 				ent.kill();
 				if (ent.getStack().getItem().equals(Items.ROTTEN_FLESH)) {
@@ -103,84 +115,72 @@ public class LiquidInputHatchBlockEntity extends BlockEntity implements BlockCom
 		return null;
 	}
 
-	@Override
 	public void tick() {
-		if (world != null && !world.isClient) {
-			BlockPos neighborPos = pos.offset(Direction.DOWN, 1);
-			BlockEntity be = world.getBlockEntity(neighborPos);
-			if (be instanceof BlockComponentProvider && ((BlockComponentProvider) be).hasComponent(world, neighborPos, FluidContainerComponent.TYPE, Direction.UP)) {
-				fluidContainerComponent.tick(((BlockComponentProvider) be).getComponent(world, neighborPos, FluidContainerComponent.TYPE, Direction.UP));
-			} else {
-				fluidContainerComponent.tick();
+		if (getWorld() == null || getWorld().isClient()) {
+			return;
+		}
+		FluidContainer container = FluidContainerComponent.TYPE.get(this).self();
+		FluidContainer below = belowComponent.find(Direction.UP);
+		if (below != null) {
+			container.tick(below);
+		}
+		else {
+			container.tick();
+		}
+		if (fluidTicksRemaining > -1 && currentFluid != null) {
+			fluidTicksRemaining--;
+			if (container instanceof FluidContainerImpl mutable) {
+				if (mutable.getContainedFluid() == null) {
+					mutable.setContainedFluid(currentFluid);
+				}
+				if (currentFluid != null && currentFluid.equals(mutable.getContainedFluid())) {
+					mutable.setPressure(mutable.getPressure() + 1000);
+					mutable.setTemperature(TransportUtilities.NOMINAL_TEMPERATURE);
+				}
 			}
-			if (fluidTicksRemaining > -1 && currentFluid != null) {
-				fluidTicksRemaining--;
-				if (fluidContainerComponent.getContainedFluid() == null) {
-					fluidContainerComponent.setContainedFluid(currentFluid);
-				}
-				if (currentFluid != null && currentFluid.equals(fluidContainerComponent.getContainedFluid())) {
-					fluidContainerComponent.setPressure(fluidContainerComponent.getPressure() + 1000);
-					fluidContainerComponent.setTemperature(TransportUtilities.NOMINAL_TEMPERATURE);
-				}
-			} else {
-				currentFluid = null;
-			}
-			ForcefieldFluid newCurrentFluid = getNewCurrentFluid();
-			if (currentFluid == null || currentFluid.equals(newCurrentFluid)) {
-				ForcefieldFluid testFluid = removeCurrentFluid();
-				if (testFluid != null && (currentFluid == null || testFluid.equals(currentFluid))) {
-					currentFluid = testFluid;
-					fluidTicksRemaining += 5;
-				}
+		}
+		else {
+			currentFluid = null;
+		}
+		ForcefieldFluid newCurrentFluid = getNewCurrentFluid();
+		if (currentFluid == null || currentFluid.equals(newCurrentFluid)) {
+			ForcefieldFluid testFluid = removeCurrentFluid();
+			if (testFluid != null && (currentFluid == null || testFluid.equals(currentFluid))) {
+				currentFluid = testFluid;
+				fluidTicksRemaining += 5;
 			}
 		}
 	}
 
-	private ForcefieldFluid currentFluid = null;
-	private int fluidTicksRemaining = -1;
-	private final FluidContainerComponentImpl fluidContainerComponent = new FluidContainerComponentImpl(10, 0.2F);
-
 	@Override
-	public void fromTag(CompoundTag tag) {
-		super.fromTag(tag);
+	protected void readNbt(NbtCompound tag, RegistryWrapper.WrapperLookup registryLookup) {
+		super.readNbt(tag, registryLookup);
 		if (tag.getInt("bufferedFluid") != -1) {
 			currentFluid = ForcefieldFluid.REGISTRY.get(tag.getInt("bufferedFluid"));
 		}
 		fluidTicksRemaining = tag.getInt("fluidTicksRemaining");
-		fluidContainerComponent.fromTag(tag);
 	}
 
 	@Override
-	public CompoundTag toTag(CompoundTag tag) {
-		tag = super.toTag(tag);
+	protected void writeNbt(NbtCompound tag, RegistryWrapper.WrapperLookup registryLookup) {
+		super.writeNbt(tag, registryLookup);
 		if (currentFluid != null) {
 			tag.putInt("bufferedFluid", ForcefieldFluid.REGISTRY.getRawId(currentFluid));
-		} else {
+		}
+		else {
 			tag.putInt("bufferedFluid", -1);
 		}
 		tag.putInt("fluidTicksRemaining", fluidTicksRemaining);
-		return fluidContainerComponent.toTag(tag);
 	}
 
 	@Override
-	public <T extends Component> boolean hasComponent(BlockView blockView, BlockPos blockPos, ComponentType<T> componentType, Direction direction) {
-		if (componentType != FluidContainerComponent.TYPE) {
-			return false;
-		}
-		return direction == null || direction == Direction.DOWN;
+	public NbtCompound toInitialChunkDataNbt(RegistryWrapper.WrapperLookup registryLookup) {
+		return createNbt(registryLookup);
 	}
 
-	@SuppressWarnings("unchecked")
+	@Nullable
 	@Override
-	public <T extends Component> T getComponent(BlockView blockView, BlockPos blockPos, ComponentType<T> componentType, Direction direction) {
-		if (hasComponent(blockView, blockPos, componentType, direction)) {
-			return (T) fluidContainerComponent;
-		}
-		return null;
-	}
-
-	@Override
-	public Set<ComponentType<?>> getComponentTypes(BlockView blockView, BlockPos blockPos, Direction direction) {
-		return Collections.singleton(FluidContainerComponent.TYPE);
+	public Packet<ClientPlayPacketListener> toUpdatePacket() {
+		return BlockEntityUpdateS2CPacket.create(this);
 	}
 }
